imagen de mi empresa

--- a/internas/contactos.html
+++ b/internas/contactos.html
@@ -13,5 +13,6 @@
  <a href="contactos.html">contactos</a>
  <a href="formulario.html">formulario</a>
  <a href="nosotros.html">nosotros</a>
+ <img src="../imgs/bubadios.jpg" alt="imagen de Dios">
 </body>
 </html>
