formulario de contacto

--- a/internas/formulario.html
+++ b/internas/formulario.html
@@ -13,6 +13,16 @@
  <a href="contactos.html">contactos</a>
  <a href="formulario.html">formulario</a>
  <a href="nosotros.html">nosotros</a>
+ <form>
+   <label for="usuario">usuario</label>  
+   <input type="text" placeholder="ingresa tu usuario">
+   <label for="contraseña">contraseña</label>
+   <input type="password>
+   <input type="submit" value="INGRESAR">
+   
+
+
+ </form>
     
 </body>
 </html>
